# FreeCAD_sf_master

./: .travis.yml  CMakeLists.txt
cMake/FreeCAD_Helpers/: SetupSalomeSMESH.cmake
src/App/: Application.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectPyImp.cpp  ExtensionContainer.cpp  ExtensionContainer.h  GeoFeature.cpp  GeoFeature.h  GeoFeatureGroupExtension.cpp  GroupExtension.cpp  GroupExtension.h  Origin.cpp  Origin.h  OriginGroupExtension.cpp  OriginGroupExtension.h  Part.cpp  Part.h  Property.cpp  Property.h  PropertyContainerPyImp.cpp  PropertyLinks.cpp  PropertyLinks.h  PropertyStandard.cpp  PropertyStandard.h  PropertyUnits.cpp
src/Base/: Uuid.cpp  Uuid.h
src/Gui/: Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  Command.cpp  CommandDoc.cpp  CommandView.cpp  DemoMode.cpp  DlgSettings3DView.ui  Document.cpp  Document.h  DocumentPyImp.cpp  Flag.cpp  GLPainter.cpp  GLPainter.h  GUIfreeInventorView.cpp  GUIfreeInventorView.h  GUIfreeInventorViewPy.cpp  GUIfreeInventorViewPy.h  MDIView.cpp  MDIView.h  Selection.cpp  TextureMapping.cpp  Tree.cpp  Tree.h  TreeView.cpp  View.cpp  View.h  View3DInventor.cpp  View3DInventor.h  View3DInventorViewer.cpp  View3DInventorViewer.h  View3DInventorWidgets.cpp  View3DInventorWidgets.h  ViewProvider.cpp  ViewProvider.h  ViewProviderDocumentObject.cpp  ViewProviderDocumentObject.h  ViewProviderGeoFeatureGroupExtension.h  ViewProviderOrigin.h  (+2 more)
src/Mod/: CMakeLists.txt
src/Mod/Arch/: TestArch.py
src/Mod/Fem/: CMakeLists.txt  ObjectsFem.py
src/Mod/Fem/App/: AppFem.cpp  CMakeLists.txt  FemPostBranch.cpp  FemPostBranchFilter.cpp  FemPostBranchFilter.h  FemPostFilter.cpp  FemPostFilter.h  FemPostFilterPy.xml  FemPostFilterPyImp.cpp  FemPostFunction.cpp  FemPostGroupExtension.cpp  FemPostGroupExtension.h  FemPostObject.cpp  FemPostObject.h  FemPostPipeline.cpp  FemPostPipeline.h  FemPostPipelinePy.xml  FemPostPipelinePyImp.cpp  PropertyPostDataObject.cpp
src/Mod/Fem/Gui/: AppFemGui.cpp  CMakeLists.txt  Command.cpp  TaskCreateNodeSet.cpp  TaskPostBoxes.cpp  TaskPostBoxes.h  TaskPostSteps.ui  ViewProviderFemPostBranchFilter.cpp  ViewProviderFemPostBranchFilter.h  ViewProviderFemPostFilter.cpp  ViewProviderFemPostFilter.h  ViewProviderFemPostFilterPy.xml  ViewProviderFemPostFilterPyImp.cpp  ViewProviderFemPostFunction.cpp  ViewProviderFemPostFunction.h  ViewProviderFemPostObject.cpp  ViewProviderFemPostObject.h  ViewProviderFemPostPipeline.cpp  ViewProviderFemPostPipeline.h  Workbench.cpp
src/Mod/Fem/Gui/Resources/: Fem.qrc
src/Mod/Fem/femcommands/: commands.py
src/Mod/Fem/feminout/: importCcxFrdResults.py
src/Mod/Fem/femobjects/: post_glyphfilter.py
src/Mod/Fem/femtest/app/: test_object.py
src/Mod/Fem/femviewprovider/: view_post_glyphfilter.py
src/Mod/Mesh/Gui/: Command.cpp  MeshSelection.cpp
src/Mod/Part/: TestPartApp.py
src/Mod/Part/App/: AppPartPy.cpp  CMakeLists.txt  FeatureGeometrySet.cpp  FeatureRevolution.cpp  Geometry.cpp  Geometry.h  Identifier.cpp  Identifier.h  PartFeatures.cpp  Reference.cpp  Reference.h  TopoShape.cpp  TopoShape.h  TopoShapeCompSolidPyImp.cpp  TopoShapeCompoundPyImp.cpp  TopoShapeEdgePyImp.cpp  TopoShapeFacePyImp.cpp  TopoShapeGeometry.cpp  TopoShapeNaming.cpp  TopoShapePy.xml  TopoShapePyImp.cpp  TopoShapeShellPyImp.cpp  TopoShapeSolidPyImp.cpp  TopoShapeVertexPyImp.cpp  TopoShapeWirePyImp.cpp
src/Mod/Part/Gui/: Command.cpp  CrossSections.cpp  DlgBooleanOperation.cpp
src/Mod/PartDesign/: TestPartDesignGui.py
src/Mod/PartDesign/App/: Body.cpp  Body.h  FeatureGroove.cpp  FeatureRevolution.cpp  ShapeBinder.h
src/Mod/PartDesign/Gui/: Command.cpp  CommandBody.cpp  CommandPrimitive.cpp
src/Mod/Points/Gui/: Command.cpp
src/Mod/Sandbox/Gui/: AppSandboxGui.cpp
src/Mod/Sketcher/App/: SketchObject.cpp
src/Mod/Sketcher/Gui/: Command.cpp  CommandCreateGeo.cpp  EditDatumDialog.cpp  SoDatumLabel.cpp  ViewProviderSketch.cpp  ViewProviderSketch.h
src/Mod/Sketcher3D/: CMakeLists.txt  Init.py  InitGui.py  Makefile.am  Sketcher3D.dox
src/Mod/Sketcher3D/App/: AppSketcher3D.cpp  AppSketcher3DPy.cpp  CMakeLists.txt  Makefile.am  PreCompiled.cpp  PreCompiled.h  Sketch3DObject.cpp  Sketch3DObject.h  Sketch3DObjectPy.xml  Sketch3DObjectPyImp.cpp  Solver.hpp  SolverPy.xml  SolverPyImp.cpp
src/Mod/Sketcher3D/Gui/: AppSketcher3DGui.cpp  AppSketcher3DGuiPy.cpp  CMakeLists.txt  Command.cpp  Makefile.am  Misc.cpp  Misc.h  PreCompiled.h  StateMachine.cpp  StateMachine.h  StateMachineRedraw.cpp  ViewProviderSketch3D.cpp  ViewProviderSketch3D.h  Workbench.cpp  Workbench.h
src/Mod/Test/: Document.py
